Refactor Japanese comments to English and update documentation in the reproduction pipeline notebook. Set execution count to null for a clean state.

--- a/examples/run_reproduction_pipeline_for_anal.sci.2026.ipynb
+++ b/examples/run_reproduction_pipeline_for_anal.sci.2026.ipynb
@@ -6273,7 +6273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "e2bcd01b",
    "metadata": {},
    "outputs": [],
@@ -6311,35 +6311,35 @@
     "    Parameters\n",
     "    ----------\n",
     "    df : DataFrame\n",
-    "        必要なカラム: ['label', 'additive', value_col] \n",
-    "        z_replicate_stats(df, value_col) が内部で生成。\n",
+    "        Required columns: ['label', 'additive', value_col].\n",
+    "        `z_replicate_stats(df, value_col)` is generated internally.\n",
     "    value_col : str\n",
-    "        'FRB', 'ratio' などフィット対象の列名。\n",
+    "        Column to fit, e.g., 'FRB' or 'ratio'.\n",
     "    Lmin, Lmax : float\n",
-    "        代表曲線用に描く濃度範囲。\n",
+    "        Concentration range for the representative curve.\n",
     "    return_residuals : bool\n",
-    "        True の場合、各cell×濃度の標準化残差テーブルも返す。\n",
+    "        If True, also return the standardized residual table per cell × concentration.\n",
     "    use_weights : bool\n",
-    "        True: SDで重み付け、False: 重み付けなし(OLS)\n",
+    "        True: weighted by SD, False: unweighted (OLS).\n",
     "    absolute_sigma : bool\n",
-    "        True: sigmaを絶対値として扱う、False: 相対的な重みとして扱う\n",
+    "        True: treat sigma as absolute, False: treat as relative weights.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
     "    fit_tbl : DataFrame\n",
-    "        1行1cellのフィット結果(Imax, Kd, B, SD_*, R2, chi2_red等)。\n",
+    "        One row per cell with fit results (Imax, Kd, B, SD_*, R2, chi2_red, etc.).\n",
     "    fit_curves : DataFrame\n",
-    "        代表曲線用の dense grid（L, fit）。\n",
+    "        Dense grid for the representative curve (L, fit).\n",
     "    resid_df : DataFrame (optional)\n",
-    "        return_residuals=True のとき:\n",
-    "        各cell×濃度の (y, yhat, sd, std_resid, ...) を含む。\n",
+    "        If return_residuals=True:\n",
+    "        Contains (y, yhat, sd, std_resid, ...) for each cell × concentration.\n",
     "    \"\"\"\n",
     "    stats = z_replicate_stats(df, value_col)\n",
     "    results = []\n",
     "    curves = []\n",
     "    resid_list = []\n",
     "    \n",
-    "    # フィッティング手法の識別\n",
+    "    # Identify fitting method\n",
     "    if use_weights and absolute_sigma:\n",
     "        fit_method = \"Weighted_AbsTrue\"\n",
     "    elif not use_weights and not absolute_sigma:\n",
@@ -6352,7 +6352,7 @@
     "        y  = sub['mean'].values.astype(float)\n",
     "        sd = sub['sd'].values.astype(float)\n",
     "\n",
-    "        # SDがゼロ/NaNのところは最小値で埋める\n",
+    "        # Fill zero/NaN SD with a minimum value\n",
     "        sd = np.where((sd <= 0) | (~np.isfinite(sd)), 0.05, sd)\n",
     "\n",
     "        if len(L) < 3 or np.all(L == 0):\n",
@@ -6364,7 +6364,7 @@
     "\n",
     "        try:\n",
     "            if use_weights:\n",
-    "                # 重み付きフィッティング\n",
+    "                # Weighted fit\n",
     "                popt, pcov = curve_fit(\n",
     "                    langmuir, L, y,\n",
     "                    p0=[I0, K0, B0],\n",
@@ -6375,7 +6375,7 @@
     "                    maxfev=20000\n",
     "                )\n",
     "            else:\n",
-    "                # 重み付けなし(OLS)\n",
+    "                # Unweighted (OLS)\n",
     "                popt, pcov = curve_fit(\n",
     "                    langmuir, L, y,\n",
     "                    p0=[I0, K0, B0],\n",
@@ -6396,11 +6396,11 @@
     "            sst  = np.sum(w * (y - ybar) ** 2)\n",
     "            r2w  = 1 - sse / sst if sst > 0 else np.nan\n",
     "\n",
-    "            # ---- χ² and standardized residuals ----\n",
-    "            std_resid = (y - yhat) / sd          # (y - ŷ)/SD\n",
-    "            chi2 = np.sum(std_resid ** 2)        # χ² = Σ(標準化残差^2)\n",
-    "            dof  = max(len(L) - len(popt), 1)    # 自由度 = n - p\n",
-    "            chi2_red = chi2 / dof                # reduced χ²\n",
+    "            # ---- chi^2 and standardized residuals ----\n",
+    "            std_resid = (y - yhat) / sd          # (y - yhat) / SD\n",
+    "            chi2 = np.sum(std_resid ** 2)        # chi^2 = sum(standardized residual^2)\n",
+    "            dof  = max(len(L) - len(popt), 1)    # degrees of freedom = n - p\n",
+    "            chi2_red = chi2 / dof                # reduced chi^2\n",
     "\n",
     "            rms_std_resid    = float(np.sqrt(np.mean(std_resid ** 2)))\n",
     "            maxabs_std_resid = float(np.max(np.abs(std_resid)))\n",
@@ -6423,7 +6423,7 @@
     "                'n_points': len(L)\n",
     "            })\n",
     "\n",
-    "            # dense curve for representative averaging later\n",
+    "            # Dense curve for representative averaging later\n",
     "            Lgrid = np.linspace(Lmin, Lmax, 200)\n",
     "            curves.append(pd.DataFrame({\n",
     "                'label': lab,\n",
@@ -6433,7 +6433,7 @@
     "                'fit': langmuir(Lgrid, *popt)\n",
     "            }))\n",
     "\n",
-    "            # per-point residual info（必要なら）\n",
+    "            # Per-point residual info (optional)\n",
     "            resid_list.append(pd.DataFrame({\n",
     "                'label': lab,\n",
     "                'metric': value_col,\n",
@@ -6461,25 +6461,25 @@
     "\n",
     "def small_multiples_from_fits(df, fit_tbl, value_col, Lmin=0.0, Lmax=20.0, fit_methods=None):\n",
     "    \"\"\"\n",
-    "    fit_per_cellの結果を使って、複数手法のフィット曲線を重ねてプロット。\n",
+    "    Plot multiple fitted curves using the results from fit_per_cell.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    df : DataFrame\n",
-    "        元データ（観測値プロット用）\n",
+    "        Raw data (for plotting observations).\n",
     "    fit_tbl : DataFrame\n",
-    "        fit_per_cellから返されたフィット結果テーブル\n",
+    "        Fit results table returned by fit_per_cell.\n",
     "    value_col : str\n",
     "        'FRB' or 'ratio'\n",
     "    Lmin, Lmax : float\n",
-    "        x軸の範囲\n",
+    "        x-axis range.\n",
     "    fit_methods : list of str, optional\n",
-    "        表示するfit_methodのリスト。Noneなら全手法表示。\n",
+    "        List of fit_method values to show. If None, show all methods.\n",
     "    \"\"\"\n",
     "    stats = z_replicate_stats(df, value_col)\n",
     "    print(stats)\n",
     "    \n",
-    "    # フィルタリング\n",
+    "    # Filtering\n",
     "    if fit_methods is not None:\n",
     "        fit_sub = fit_tbl[fit_tbl['fit_method'].isin(fit_methods)].copy()\n",
     "    else:\n",
@@ -6494,13 +6494,13 @@
     "    if n == 1:\n",
     "        axes = [axes]\n",
     "    \n",
-    "    # カラーマップ（手法ごとに色分け）\n",
+    "    # Colormap (color by method)\n",
     "    methods = sorted(fit_sub['fit_method'].unique())\n",
     "    colors = plt.cm.tab10(np.linspace(0, 1, len(methods)))\n",
     "    method_colors = dict(zip(methods, colors))\n",
     "\n",
     "    for ax, lab in zip(axes, labels):\n",
-    "        # データ点プロット\n",
+    "        # Plot data points\n",
     "        sub_data = stats[stats['label']==lab].copy()\n",
     "        L = sub_data['additive'].values\n",
     "        y = sub_data['mean'].values\n",
@@ -6508,7 +6508,7 @@
     "        ax.errorbar(L, y, yerr=yerr, fmt='o', capsize=3, color='black', \n",
     "                    zorder=10, markersize=5)\n",
     "\n",
-    "        # 各手法のフィット曲線\n",
+    "        # Fit curves for each method\n",
     "        for method in methods:\n",
     "            fit_cell = fit_sub[(fit_sub['label']==lab) & (fit_sub['fit_method']==method)]\n",
     "            if len(fit_cell) == 0:\n",
@@ -6530,9 +6530,9 @@
     "        ax.set_xlabel(\"[Fluo-FRB] (nM)\",fontweight='bold')\n",
     "        ax.set_ylabel(r\"$\\mathbfit{I}_{\\mathbf{R}}$\" if value_col=='FRB' else r\"$\\mathbfit{I}_{\\mathbf{T}}\\mathbf{/}\\mathbfit{I}_{\\mathbf{R}}$\",fontsize=12)\n",
     "        \n",
-    "        # 凡例の位置を動的に設定：y軸の上限の2/3より上にあったら右下に配置\n",
-    "        y_axis_max = ax.get_ylim()[1]  # プロットのy軸の実際の上限を取得\n",
-    "        threshold = y_axis_max * 0.75  # y軸の上位1/3の閾値\n",
+    "        # Dynamically place the legend: if above the upper 1/4 of the y-range, use lower-right\n",
+    "        y_axis_max = ax.get_ylim()[1]  # Actual upper limit of y-axis\n",
+    "        threshold = y_axis_max * 0.75  # Threshold for top 1/4\n",
     "        y_last = y[-1]\n",
     "        \n",
     "        if y_last > threshold:\n",
@@ -6568,8 +6568,7 @@
     "    plt.title(f'Representative mean curve ±SE across cells ({value_col})')\n",
     "    plt.legend()\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n"
+    "    plt.show()\n"
    ]
   },
   {
